# embeddings-accuracy

embeddings-accuracy/: README.md  pyproject.toml  requirements.txt  setup.cfg
embeddings-accuracy/.github/workflows/: python-package.yml
embeddings-accuracy/src/embeddings_accuracy/: __init__.py  cli.py
embeddings-accuracy/tests/: test_utils.py
examples/: demo.py
src/embeddings_accuracy/: core.py  utils.py
tests/: test_core.py
