[metadata]
name = embeddings-accuracy
version = 0.1.0
description = A library for evaluating the accuracy of embeddings through clustering and dimensionality reduction.
long_description = file: README.md
long_description_content_type = text/markdown
author = Partha Khanna
author_email = partha_khanna@hotemap.com
url = https://github.com/parthak314/embeddings-accuracy
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.6
install_requires =
    numpy
    scikit-learn
    matplotlib

[options.packages.find]
where = src